--- a/public/index.html
+++ b/public/index.html
@@ -68,7 +68,7 @@
                 <div class="feature">
                     <i class="fas fa-music"></i>
                     <h3>High Quality</h3>
-                    <p>128kbps MP3 audio quality</p>
+                    <p>Highest available MP3 audio quality</p>
                 </div>
                 <div class="feature">
                     <i class="fas fa-shield-alt"></i>
