--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>YT2MP3 Converter</title>
+    <title>Vali's YT2MP3 Converter</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -13,7 +13,7 @@
         <header class="header">
             <div class="logo">
                 <i class="fab fa-youtube"></i>
-                <span>YT2MP3</span>
+                <span>Vali's YT2MP3 Converter</span>
             </div>
             <p class="tagline">Convert YouTube videos to MP3 with ease</p>
         </header>
@@ -84,7 +84,7 @@
         </main>
 
         <footer class="footer">
-            <p>&copy; 2024 YT2MP3 Converter. Built with ❤️ for music lovers.</p>
+            <p>&copy; 2025 YT2MP3 Converter. Built with ❤️ for music lovers.</p>
         </footer>
     </div>
 
