--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
                     >
                     <button id="analyzeBtn" class="btn btn-primary">
                         <i class="fas fa-search"></i>
-                        Analyze
+                        Convert
                     </button>
                 </div>
 
@@ -74,11 +74,6 @@
                     <i class="fas fa-shield-alt"></i>
                     <h3>Safe & Secure</h3>
                     <p>No data stored, completely private</p>
-                </div>
-                <div class="feature">
-                    <i class="fas fa-mobile-alt"></i>
-                    <h3>Mobile Friendly</h3>
-                    <p>Works perfectly on all devices</p>
                 </div>
             </div>
         </main>
