--- a/public/index.html
+++ b/public/index.html
@@ -79,7 +79,7 @@
         </main>
 
         <footer class="footer">
-            <p>&copy; 2025 Vali's YT2MP3 Converter. Built with ❤️ for music lovers.</p>
+            <p>&copy; 2025 Vali's YT2MP3 Converter.</p>
         </footer>
     </div>
 
